tests/negative/runtime/byteat_negative_index/input.ci
void main() {
    print(toString(byteAt("abc", -1)) + "\n");
}
